Membuat TFIDF menggunakan trigram

--- a/templates/hasil.html
+++ b/templates/hasil.html
@@ -11,6 +11,7 @@
     <h2>Kemiripan Kata</h2>
     {{ similar_words_tables | safe }}
 
-    <button><a href="/">Kembali ke beranda</a></button>
+    <br>
+    <button><a href="/" style="color: red;">Kembali ke beranda</a></button>
 </body>
 </html>
